@@ -23,7 +23,8 @@ https://github.com/elastic/apm-server/compare/6.1...6.2[View commits]
 ==== Bug fixes
 - Updated systemd doc url {pull}354[354]
 - Updated readme doc urls {pull}356[356]
-- Use updated stack trace frame values for calculating error `grouping_keys` {pull}485[485] 
+- Use updated stack trace frame values for calculating error `grouping_keys` {pull}485[485]
+- Fix panic when a signal is delivered before the server is instantiated {pull}580[580]
 
 ==== Added
 - service.environment {pull}366[366]
